--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "wowds-icons": "^0.0.3",
+    "wowds-tokens": "^0.0.9",
+    "wowds-ui": "^0.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
