--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "emotion-reset": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "wowds-icons": "^0.0.3",
