--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "axios": "^1.7.2",
     "emotion-reset": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "wowds-icons": "^0.0.3",
     "wowds-tokens": "^0.0.9",
     "wowds-ui": "^0.1.1"
