--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@tanstack/react-query": "^5.51.16",
+    "@tanstack/react-query-devtools": "^5.51.16",
     "axios": "^1.7.2",
     "emotion-reset": "^3.0.1",
     "react": "^18.3.1",
