--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-wordcloud": "^1.2.7",
     "wowds-icons": "^0.0.3",
     "wowds-tokens": "^0.0.9",
     "wowds-ui": "^0.1.1"
