--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@nivo/line": "^0.87.0",
+    "@nivo/radar": "^0.87.0",
     "@tanstack/react-query": "^5.51.16",
     "@tanstack/react-query-devtools": "^5.51.16",
     "axios": "^1.7.2",
